Sheetcut only in DevMode